src/components/screens/votingQueue/editor/editor.css
.wrapper {
  & .contentContainer {
    display: flex;
    width: auto;
    padding: 0;
    margin: 20px;
    border-radius: 0;
    border-bottom: 1px solid var(--color-platinum);
  }

  & header {
    @mixin headingNormal;

    font-size: var(--font-size-h5);
    color: var(--color-maastricht-blue);
  }
}

.headerContainer {
  display: flex;
  justify-content: space-between;
  margin: 20px;
}

.contentHeader {
  display: flex;
}

.infoColumn {
  width: 45%;
  padding: 0;
}

.oldAmountColumn {
  padding: 0;
  width: 20%;
  color: var(--color-maastricht-blue);
}

.centerContent {
  display: flex;
  align-items: center;
}

.newAmountColumn {
  padding: 0;
  display: flex;
  flex: 1;
  color: var(--color-maastricht-blue);
}

.delegateInfoContainer {
  display: flex;
}

.delegateInfo {
  display: flex;
  flex-direction: column;
  justify-content: center;
  margin-left: 10px;

  & span:first-child {
    color: var(--color-maastricht-blue);
  }

  & span:nth-child(2) {
    color: var(--color-blue-gray);
  }
}

.editColumn {
  padding: 0;
  width: auto;
}

.contentScrollable {
  margin-top: 10px;
  overflow: scroll;
  max-height: 290px;
  display: flex;
  flex-direction: column;

  & header {
    padding: 0 0 20px 0;
  }
}

.voteItemContainer {
  display: flex;
  flex-direction: row;
  margin-bottom: 6px;
  padding: 8px 0;

  &:last-child {
    margin-bottom: 0;
  }

  & img.editIcon {
    display: none;
  }

  &:hover {
    & img.editIcon {
      display: block;
      cursor: pointer;
    }
  }
}

.txPriority {
  margin: 0 20px 20px 20px;
}

.editIconsContainer {
  display: flex;
  justify-content: space-between;
  width: 50px;
  margin-right: 10px;
}

.editAmountInput {
  height: 100%;
  margin-bottom: 0;

  & input {
    height: 40px !important;
    padding: 0 5px !important;

    &:not([class~="error"]) {
      & + div {
        display: none;
      }
    }

    & + div {
      position: fixed;
      z-index: 15;
      width: max-content;
      padding-top: 2px;

      & span {
        margin-top: 6px;
        position: relative;
        background-color: var(--color-white) !important;
        color: var(--color-slate-gray) !important;
        border: 1px solid var(--color-platinum);
        border-radius: var(--border-radius-standard);
        box-shadow: var(--box-shadow-standard);
      }

      &::before {
        content: '';
        display: block;
        width: 10px;
        height: 10px;
        position: absolute;
        background: var(--color-white);
        left: 23px;
        transform: rotate(45deg);
        border-color: var(--color-platinum);
        border-style: solid;
        border-width: 1px 0px 0px 1px;
        z-index: 2;
      }
    }
  }

  /** hide the status spinner **/
  & img {
    display: none;
  }
}

.formButtonsContainer {
  margin-left: 20px;
  display: flex;
}

.editVoteForm {
  display: flex;
  flex: 1;

  & .formButtons {
    padding: 0 8px;
    border: none;
    min-width: 64px;
  }
}

.feedback {
  width: 100%;
  padding: 0 var(--horizontal-padding-m);
  box-sizing: border-box;
  margin-bottom: 10px;

  & > span {
    width: 100%;
    background: var(--error-background-color);
    color: var(--color-strong-white);
    border-radius: var(--border-radius-standard);
    display: block;
    padding: var(--vertical-padding-s) var(--horizontal-padding-m);
    box-sizing: border-box;
  }
}

